src/snapshots/glass__codegen_tests__block.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_test takes integer x returns integer
    local integer a
    local integer b
    set a = (x + 1)
    set b = (a * 2)
    return b
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_test(x)
    local a = (x + 1)
    local b = (a * 2)
    return b
end
