src/snapshots/glass__codegen_tests__bool_return.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_is_positive takes integer x returns boolean
    return (x > 0)
endfunction

function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_is_positive(x)
    return (x > 0)
end
