src/snapshots/glass__codegen_tests__case_bool.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_check takes boolean x returns integer
    local integer glass_tmp_0
    if ((x == true)) then
        set glass_tmp_0 = 1
    elseif ((x == false)) then
        set glass_tmp_0 = 0
    endif
    return glass_tmp_0
endfunction

function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_check(x)
    local __case_1 = x
    local __result_1
    if (__case_1 == true) then
        __result_1 = 1
    elseif (__case_1 == false) then
        __result_1 = 0
    end
    return __result_1
end
