src/snapshots/glass__codegen_tests__case_enum.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
globals
    // SoA arrays for type Color
    integer array glass_Color_tag
    integer array glass_Color_free
    integer glass_Color_free_top = 0
    integer glass_Color_count = 0
    constant integer glass_TAG_Color_Red = 0
    constant integer glass_TAG_Color_Green = 1
    constant integer glass_TAG_Color_Blue = 2
endglobals

function glass_Color_alloc takes nothing returns integer
    local integer id
    if glass_Color_free_top > 0 then
        set glass_Color_free_top = glass_Color_free_top - 1
        set id = glass_Color_free[glass_Color_free_top]
    else
        set glass_Color_count = glass_Color_count + 1
        set id = glass_Color_count
    endif
    return id
endfunction

function glass_Color_dealloc takes integer id returns nothing
    set glass_Color_free[glass_Color_free_top] = id
    set glass_Color_free_top = glass_Color_free_top + 1
endfunction

function glass_new_Color_Red takes nothing returns integer
    local integer id = glass_Color_alloc()
    set glass_Color_tag[id] = 0
    return id
endfunction

function glass_new_Color_Green takes nothing returns integer
    local integer id = glass_Color_alloc()
    set glass_Color_tag[id] = 1
    return id
endfunction

function glass_new_Color_Blue takes nothing returns integer
    local integer id = glass_Color_alloc()
    set glass_Color_tag[id] = 2
    return id
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_to_int takes integer c returns integer
    local integer glass_tmp_0
    if ((c == glass_TAG_Color_Red)) then
        set glass_tmp_0 = 1
    elseif ((c == glass_TAG_Color_Green)) then
        set glass_tmp_0 = 2
    elseif ((c == glass_TAG_Color_Blue)) then
        set glass_tmp_0 = 3
    endif
    return glass_tmp_0
endfunction


function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

local glass_TAG_Color_Red = 0
local glass_TAG_Color_Green = 1
local glass_TAG_Color_Blue = 2

function glass_to_int(c)
    local __case_1 = c
    local __result_1
    if (__case_1 == glass_TAG_Color_Red) then
        __result_1 = 1
    elseif (__case_1 == glass_TAG_Color_Green) then
        __result_1 = 2
    elseif (__case_1 == glass_TAG_Color_Blue) then
        __result_1 = 3
    end
    return __result_1
end
