src/snapshots/glass__codegen_tests__case_with_fields.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
globals
    // SoA arrays for type Shape
    integer array glass_Shape_tag
    real array glass_Shape_Circle_radius
    real array glass_Shape_Rect_w
    real array glass_Shape_Rect_h
    integer array glass_Shape_free
    integer glass_Shape_free_top = 0
    integer glass_Shape_count = 0
    constant integer glass_TAG_Circle = 0
    constant integer glass_TAG_Rect = 1
endglobals

function glass_Shape_alloc takes nothing returns integer
    local integer id
    if glass_Shape_free_top > 0 then
        set glass_Shape_free_top = glass_Shape_free_top - 1
        set id = glass_Shape_free[glass_Shape_free_top]
    else
        set glass_Shape_count = glass_Shape_count + 1
        set id = glass_Shape_count
    endif
    return id
endfunction

function glass_Shape_dealloc takes integer id returns nothing
    set glass_Shape_free[glass_Shape_free_top] = id
    set glass_Shape_free_top = glass_Shape_free_top + 1
endfunction

function glass_new_Circle takes real p_radius returns integer
    local integer id = glass_Shape_alloc()
    set glass_Shape_tag[id] = 0
    set glass_Shape_Circle_radius [id] = p_radius
    return id
endfunction

function glass_new_Rect takes real p_w, real p_h returns integer
    local integer id = glass_Shape_alloc()
    set glass_Shape_tag[id] = 1
    set glass_Shape_Rect_w [id] = p_w
    set glass_Shape_Rect_h [id] = p_h
    return id
endfunction

function glass_get_Shape_Circle_radius takes integer id returns real
    return glass_Shape_Circle_radius [id]
endfunction

function glass_get_Shape_Rect_w takes integer id returns real
    return glass_Shape_Rect_w [id]
endfunction

function glass_get_Shape_Rect_h takes integer id returns real
    return glass_Shape_Rect_h [id]
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_area takes integer s returns real
    local real r
    local real w
    local real h
    local real glass_tmp_0
    if ((glass_Shape_tag[s] == glass_TAG_Circle)) then
        set r = glass_get_Shape_Circle_radius (s)
        set glass_tmp_0 = ((r * r) * 3.1)
    elseif ((glass_Shape_tag[s] == glass_TAG_Rect)) then
        set w = glass_get_Shape_Rect_w (s)
        set h = glass_get_Shape_Rect_h (s)
        set glass_tmp_0 = (w * h)
    endif
    return glass_tmp_0
endfunction


function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

local glass_TAG_Circle = 0
local glass_TAG_Rect = 1

function glass_area(s)
    local __case_1 = s
    local __result_1
    if (__case_1.tag == glass_TAG_Circle) then
        local r = __case_1.radius
        __result_1 = ((r * r) * 3.1)
    elseif (__case_1.tag == glass_TAG_Rect) then
        local w = __case_1.w
        local h = __case_1.h
        __result_1 = (w * h)
    end
    return __result_1
end
