src/snapshots/glass__codegen_tests__constructor.snap
---
source: src/codegen_tests.rs
expression: compile_both(source)
---
===== JASS =====
globals
    // SoA arrays for type Model
    integer array glass_Model_Model_wave
    integer array glass_Model_Model_score
    integer array glass_Model_free
    integer glass_Model_free_top = 0
    integer glass_Model_count = 0
endglobals

function glass_Model_alloc takes nothing returns integer
    local integer id
    if glass_Model_free_top > 0 then
        set glass_Model_free_top = glass_Model_free_top - 1
        set id = glass_Model_free[glass_Model_free_top]
    else
        set glass_Model_count = glass_Model_count + 1
        set id = glass_Model_count
    endif
    return id
endfunction

function glass_Model_dealloc takes integer id returns nothing
    set glass_Model_free[glass_Model_free_top] = id
    set glass_Model_free_top = glass_Model_free_top + 1
endfunction

function glass_new_Model takes integer p_wave, integer p_score returns integer
    local integer id = glass_Model_alloc()
    set glass_Model_Model_wave [id] = p_wave
    set glass_Model_Model_score [id] = p_score
    return id
endfunction

function glass_i2b takes integer i returns boolean
    return i != 0
endfunction

function glass_make takes nothing returns integer
    return glass_new_Model(1, 100)
endfunction


function glass_dispatch_void takes integer glass_closure returns integer
    return 0
endfunction
===== Lua =====
-- Generated by Glass compiler (Lua target)

function glass_make()
    return {wave = 1, score = 100}
end
